feat: add new notebooks covering Python OOP basics and Regular Expressions

--- a/AdvancePython/ObjectOrientedProgramming/BasicOfoop.ipynb
+++ b/AdvancePython/ObjectOrientedProgramming/BasicOfoop.ipynb
@@ -107,18 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f890de7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
     "print(type(fruits))"
@@ -126,18 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "297978c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'banana', 'cherry', 'orange']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#fruits is an object of a class\n",
     "fruits.append(\"orange\")\n",
@@ -146,19 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "496bdcbe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Toyota\n",
-      "Make: Toyota, Model: Camry, Year: 2022\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# how to create a class and object in python\n",
     "\n",
@@ -181,21 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "13c28d7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2749645576512\n",
-      "2749654854032\n",
-      "<class '__main__.MyClass'>\n",
-      "<class '__main__.MyClass'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MyClass:\n",
     "    pass # pass is use to skip the code while creating the class or it will throw an error\n",
@@ -212,40 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8c9195bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "this is the class students to manage the student information and activities \n",
-      "\n",
-      "Help on class Student in module __main__:\n",
-      "\n",
-      "class Student(builtins.object)\n",
-      " |  this is the class students to manage the student information and activities\n",
-      " |\n",
-      " |  Data descriptors defined here:\n",
-      " |\n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables\n",
-      " |\n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object\n",
-      " |\n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |\n",
-      " |  name = 'kio'\n",
-      " |\n",
-      " |  roll_no = 101\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Student:\n",
     "    \"\"\" \n",
@@ -266,22 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3389bfbd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is the name of the student: kio\n",
-      "this is the roll no of the student: 101\n",
-      "{'__module__': '__main__', '__firstlineno__': 1, '__doc__': '\\nthis is the class students to manage the student information and activities \\n', '__static_attributes__': (), '__dict__': <attribute '__dict__' of 'Student' objects>, '__weakref__': <attribute '__weakref__' of 'Student' objects>}\n",
-      "{'name': 'kio'}\n",
-      "{'roll_no': 101}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Student:\n",
     "    \"\"\" \n",
@@ -308,19 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "351d23ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Student(name=Kushal, school=ABC School)\n",
-      "Kushal yeh padai likhai kuch nahi krta sab log khali chaudi patata hai\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#instance variable method is used to add the attribute to the object\n",
     "#class variable method is used to add the attribute to the class\n",
@@ -347,18 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "49055139",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.student object at 0x0000028033A5D550>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class student:\n",
     "    \"\"\"  this is the class student to manage the student information and activities \"\"\"\n",
@@ -371,22 +276,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "28dcf305",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " the contact of c1 is :tripathi : 1234567890\n",
-      " the contact of c2 is :alice : 9876543210\n",
-      "tripathi : 1234567890\n",
-      "alice : 9876543210\n",
-      "the all the contact store in the phone directory is :None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class phoneBook:\n",
     "    # class variable: shared by all objects of this class\n",
@@ -429,19 +322,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2febb538",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tripathi : 1234567890\n",
-      "Contact not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#added the seach feature in the phone book\n",
     "\n",
@@ -500,21 +384,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0360ae42",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "koi : 1234567890\n",
-      "tripathi : 1234567890\n",
-      "alice : 9876543210\n",
-      "bob : 1122334455\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# adding the staticmethod\n",
     "# staticmethod is use to define the function inside the class and it can be called without creating the object of the class\n",
@@ -585,18 +458,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e813b9b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this vehical has 3 wheel and 1 seat and 15 milage\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#inheritance  means a class can inherit the properties of another class \n",
     "# eg one class can inherit the properties of another class it can be more than one class \n",
@@ -621,18 +486,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "8f2efa7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this vehical has 333 wheel and 333 seat and milage of 33 kmpl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#take the input by the user \n",
     "class vehical:\n",
@@ -660,22 +517,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "523455e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is the init of the car:\n",
-      "this is  init from the vehical  the og class:\n",
-      "<__main__.car object at 0x00000280343D5D30>\n",
-      "tata sieara\n",
-      "this vehical has 4 wheel and 5 seat and milage of 20 kmpl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class vehical:\n",
     "    company = \"tata\"\n",
@@ -711,22 +556,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "c7034a47",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is the init of the car:\n",
-      "this is  init from the vehical  the og class:\n",
-      "<__main__.car object at 0x00000280343D56A0>\n",
-      "tata sieara\n",
-      "this vehical has 4 wheel and 5 seat and milage of 20 kmpl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class vehical:\n",
     "    company = \"tata\"\n",
@@ -762,30 +595,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "a95a3e5b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "feature 1 is working\n",
-      "feature 2 is working\n",
-      "feature 3 is working\n",
-      "feature 1 is working\n",
-      "feature 2 is working\n",
-      "feature 3 is working\n",
-      "feature 4 is working\n",
-      "feature 1 is working\n",
-      "feature 2 is working\n",
-      "feature 3 is working\n",
-      "feature 4 is working\n",
-      "feature 5 is working\n",
-      "feature 6 is working\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#multiple inheritance\n",
     "\n",
@@ -837,22 +650,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "aa485bb3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am the Child.\n",
-      "\n",
-      "Accessing parent classes:\n",
-      "I am the Father.\n",
-      "I am the Grandfather.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example of Multilevel Inheritance in Python\n",
     "\n",
@@ -883,20 +684,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "b99df666",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am the Grandfather.\n",
-      "I am the Father.\n",
-      "I am the Child.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple Example of Multilevel Inheritance\n",
     "\n",
@@ -926,20 +717,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "6d1ca4bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Father: Cooking\n",
-      "Mother: Painting\n",
-      "Child: Dancing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example of Multiple Inheritance in Python\n",
     "\n",
@@ -968,29 +749,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1fcdc26c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#polymorphism means one thing can take many forms\n",
+    "# define variables first\n",
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "s1 = \"this is the string 1\"\n",
+    "s2 = \"this is the string 2\"\n",
+    "\n",
+    "# now perform operations\n",
+    "print(f\"The addition of {a} + {b} is {a + b}\")\n",
+    "\n",
+    "s3 = s1 + s2\n",
+    "print(f\"The addition of '{s1}' + '{s2}' is '{s3}'\")\n",
+    "\n",
+    "#here + operator is used for addition of numbers and for concatenation of strings\n",
+    "# this is also called method overloading\n",
+    "#Overloading is not supported in Python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a770b094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "\n",
+    "length = 5\n",
+    "width = 3\n",
+    "rect = Rectangle(length, width)\n",
+    "print(\"Area:\", rect.area())\n",
+    "\n",
+    "l1 = 10\n",
+    "w= 5\n",
+    "rect1 = Rectangle(l1, w)\n",
+    "print(\"Area:\", rect1.area())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a6adb28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        return self.length + other.length+ self.width +other.width\n",
+    "\n",
+    "\n",
+    "length = 5\n",
+    "width = 3\n",
+    "rect = Rectangle(length, width)\n",
+    "print(\"Area:\", rect.area())\n",
+    "\n",
+    "l1 = 10\n",
+    "w= 5\n",
+    "rect1 = Rectangle(l1, w)\n",
+    "print(\"Area:\", rect1.area())\n",
+    "print(rect+ rect1) # now it will add the length and width of both rectangles\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992696b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # method overloading means same method name but different parameters \n",
+    "\n",
+    "# class A:\n",
+    "#     def show(self,a,b):\n",
+    "#         print(a+b)\n",
+    "#     def show(self,a,b,c):\n",
+    "#         print(a+b+c)\n",
+    "\n",
+    "# a1=A() \n",
+    "# a1.show(10,20) #output  is error bcz python does not support method overloading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1948ab15",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "employee is working\n"
      ]
     }
    ],
    "source": [
-    "#polymorphism means one thing can take many forms\n",
-    "a= 10\n",
-    "b= 20\n",
-    "print(a+b)"
+    "# method overriding  in python is the process of redefining a method in a child class that is already defined in its parent class.\n",
+    "\n",
+    "class employee:\n",
+    "    def work(self):\n",
+    "        print(\"employee is working\")\n",
+    "\n",
+    "class intern (employee):\n",
+    "    pass\n",
+    "i1 = intern()\n",
+    "i1.work()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "01c4c24e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intern is working\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee:\n",
+    "    def work(self):\n",
+    "        print(\"employee is working\")\n",
+    "\n",
+    "class intern (employee):\n",
+    "    def work(self):\n",
+    "       print(\"intern is working\")\n",
+    "i1 = intern()\n",
+    "i1.work()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a2a6a38b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#incapsulation and Abstraction\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Abstract class\n",
+    "class Animal(ABC):\n",
+    "    @abstractmethod\n",
+    "    def sound(self):\n",
+    "        pass   # we don't say how, just that every animal must have a sound\n",
+    "\n",
+    "# Concrete classes\n",
+    "class Dog(Animal):\n",
+    "    def sound(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def sound(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "# Usage\n",
+    "animals = [Dog(), Cat()]\n",
+    "for a in animals:\n",
+    "    print(a.sound())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "48f2c2d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "Caught an error: Negative number not allowed: -3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a custom exception\n",
+    "class NegativeNumberError(Exception):\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        super().__init__(f\"Negative number not allowed: {value}\")\n",
+    "\n",
+    "# Function that uses the custom exception\n",
+    "def square_number(num):\n",
+    "    if num < 0:\n",
+    "        raise NegativeNumberError(num)  # raise custom exception\n",
+    "    return num * num\n",
+    "\n",
+    "# Using try-except to handle it\n",
+    "try:\n",
+    "    print(square_number(5))   # Works fine\n",
+    "    print(square_number(-3))  # Raises custom exception\n",
+    "except NegativeNumberError as e:\n",
+    "    print(\"Caught an error:\", e)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3886b8ef",
+   "id": "c0792264",
    "metadata": {},
    "outputs": [],
    "source": []
