feat: Add a functional Tkinter calculator application and basic Tkinter UI demonstrations.

--- a/AdvancePython/Tkinter/tkinter.ipynb
+++ b/AdvancePython/Tkinter/tkinter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0910c8e4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "28ddaf84",
    "metadata": {},
    "outputs": [],
@@ -61,15 +61,7 @@
    "execution_count": null,
    "id": "153cd2d3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "you are happy now\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "import tkinter.font as tkFont\n",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b01eeb2c",
    "metadata": {},
    "outputs": [],
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ac55c58e",
    "metadata": {},
    "outputs": [],
@@ -215,11 +207,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2785226d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tkinter as tk\n",
+    "import tkinter.font as tkFont\n",
+    "\n",
+    "# Create main window\n",
+    "window = tk.Tk()\n",
+    "window.title(\"Entry Component\")\n",
+    "window.minsize(width=600, height=300)\n",
+    "window.maxsize(width=700, height=400)\n",
+    "window.config(padx=20, pady=20)\n",
+    "\n",
+    "# Custom font (optional)\n",
+    "custom_font = tkFont.Font(family=\"Helvetica\", size=14, weight=\"bold\")\n",
+    "\n",
+    "# ADD THE LABEL\n",
+    "label = tk.Label(window, text=\"This is entry component\", font=custom_font)\n",
+    "label.pack(pady=10)\n",
+    "\n",
+    "# ADD THE ENTRY with placeholder behavior\n",
+    "def on_entry_click(event):\n",
+    "    if entry.get() == \"Enter your name\":\n",
+    "        entry.delete(0, \"end\")  # clear placeholder\n",
+    "        entry.config(fg=\"black\")\n",
+    "\n",
+    "def on_focusout(event):\n",
+    "    if entry.get() == \"\":\n",
+    "        entry.insert(0, \"Enter your name\")\n",
+    "        entry.config(fg=\"grey\")\n",
+    "\n",
+    "entry = tk.Entry(window, fg=\"grey\")\n",
+    "entry.insert(0, \"Enter your name\")\n",
+    "entry.bind(\"<FocusIn>\", on_entry_click)\n",
+    "entry.bind(\"<FocusOut>\", on_focusout)\n",
+    "entry.pack(padx=10, pady=10)\n",
+    "\n",
+    "# ADD THE BUTTON\n",
+    "def button_click():\n",
+    "    label.config(text=f\"You entered: {entry.get()}\")\n",
+    "\n",
+    "button = tk.Button(window, text=\"Submit\", command=button_click)\n",
+    "button.pack(pady=10)\n",
+    "\n",
+    "# START THE MAIN LOOP\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "32ed72ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username: kushal, Password: teru maak but , Email: email@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import font\n",
+    "\n",
+    "# Create main window\n",
+    "window = tk.Tk()\n",
+    "window.title(\"Login Form\")\n",
+    "window.minsize(width=400, height=300)\n",
+    "\n",
+    "# Custom font\n",
+    "custom_font = font.Font(family=\"Helvetica\", size=12, weight=\"bold\")\n",
+    "\n",
+    "# Username label and entry\n",
+    "username_label = tk.Label(window, text=\"Enter your username:\", font=custom_font)\n",
+    "username_label.pack(pady=5)\n",
+    "username_entry = tk.Entry(window, width=30)\n",
+    "username_entry.pack(pady=5)\n",
+    "\n",
+    "# Password label and entry\n",
+    "password_label = tk.Label(window, text=\"Enter your password:\", font=custom_font)\n",
+    "password_label.pack(pady=5)\n",
+    "password_entry = tk.Entry(window, width=30, show=\"*\")\n",
+    "password_entry.pack(pady=5)\n",
+    "\n",
+    "# Email label and entry\n",
+    "email_label = tk.Label(window, text=\"Enter your email:\", font=custom_font)\n",
+    "email_label.pack(pady=5)\n",
+    "email_entry = tk.Entry(window, width=30)\n",
+    "email_entry.pack(pady=5)\n",
+    "\n",
+    "# Remember me checkbox\n",
+    "remember_var = tk.IntVar()\n",
+    "remember_check = tk.Checkbutton(window, text=\"Remember me\", variable=remember_var)\n",
+    "remember_check.pack(pady=5)\n",
+    "\n",
+    "# Login button\n",
+    "def login_action():\n",
+    "    username = username_entry.get()\n",
+    "    password = password_entry.get()\n",
+    "    email = email_entry.get()\n",
+    "    print(f\"Username: {username}, Password: {password}, Email: {email}\")\n",
+    "\n",
+    "login_button = tk.Button(window, text=\"Login\", font=custom_font, command=login_action)\n",
+    "login_button.pack(pady=10)\n",
+    "\n",
+    "# Exit button\n",
+    "exit_button = tk.Button(window, text=\"Exit\", command=window.quit)\n",
+    "exit_button.pack(pady=5)\n",
+    "\n",
+    "# Run the application\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdae2623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "\n",
+    "# Main window\n",
+    "window = tk.Tk()\n",
+    "window.title(\"Tkinter Demo Project\")\n",
+    "window.minsize(width=600, height=600)\n",
+    "\n",
+    "# --- 2. Label, Title, minsize, pack ---\n",
+    "label = tk.Label(window, text=\"Welcome to Tkinter GUI Demo!\", font=(\"Arial\", 16))\n",
+    "label.pack(pady=10)\n",
+    "\n",
+    "# --- 3. Button and change label text ---\n",
+    "def change_text():\n",
+    "    label.config(text=\"You clicked the button!\")\n",
+    "\n",
+    "btn = tk.Button(window, text=\"Click Me\", command=change_text)\n",
+    "btn.pack(pady=5)\n",
+    "\n",
+    "# --- 4. Entry component ---\n",
+    "entry_label = tk.Label(window, text=\"Enter your name:\")\n",
+    "entry_label.pack()\n",
+    "entry = tk.Entry(window, width=30)\n",
+    "entry.pack(pady=5)\n",
+    "\n",
+    "# --- 5. ttk example ---\n",
+    "ttk_label = ttk.Label(window, text=\"This is a ttk Label (modern look).\")\n",
+    "ttk_label.pack(pady=5)\n",
+    "\n",
+    "# --- 6. Quit button ---\n",
+    "quit_btn = ttk.Button(window, text=\"Quit\", command=window.quit)\n",
+    "quit_btn.pack(pady=5)\n",
+    "\n",
+    "# --- 7. Frames and background colors ---\n",
+    "frame = tk.Frame(window, bg=\"lightblue\", bd=2, relief=\"sunken\")\n",
+    "frame.pack(pady=10, fill=\"x\")\n",
+    "frame_label = tk.Label(frame, text=\"Inside a Frame\", bg=\"lightblue\")\n",
+    "frame_label.pack(pady=5)\n",
+    "\n",
+    "# --- 8. Text, Separator, and padding ---\n",
+    "text_widget = tk.Text(window, height=4, width=40)\n",
+    "text_widget.insert(tk.END, \"This is a Text widget.\\nYou can type multiple lines here.\")\n",
+    "text_widget.pack(pady=5)\n",
+    "\n",
+    "separator = ttk.Separator(window, orient=\"horizontal\")\n",
+    "separator.pack(fill=\"x\", pady=10)\n",
+    "\n",
+    "# --- 9. Checkbutton widget ---\n",
+    "check_var = tk.IntVar()\n",
+    "check_btn = tk.Checkbutton(window, text=\"I agree to terms\", variable=check_var)\n",
+    "check_btn.pack(pady=5)\n",
+    "\n",
+    "# --- 10. Radiobutton widget ---\n",
+    "radio_var = tk.StringVar(value=\"Option1\")\n",
+    "radio1 = tk.Radiobutton(window, text=\"Option 1\", variable=radio_var, value=\"Option1\")\n",
+    "radio2 = tk.Radiobutton(window, text=\"Option 2\", variable=radio_var, value=\"Option2\")\n",
+    "radio1.pack()\n",
+    "radio2.pack()\n",
+    "\n",
+    "# --- 11. Listbox widget ---\n",
+    "listbox = tk.Listbox(window, height=5)\n",
+    "items = [\"Python\", \"Java\", \"C++\", \"JavaScript\", \"Go\"]\n",
+    "for item in items:\n",
+    "    listbox.insert(tk.END, item)\n",
+    "listbox.pack(pady=5)\n",
+    "\n",
+    "# --- 12. Spinbox widget ---\n",
+    "spinbox = tk.Spinbox(window, from_=1, to=10, width=5)\n",
+    "spinbox.pack(pady=5)\n",
+    "\n",
+    "# Run the application\n",
+    "window.mainloop()"
+   ]
   }
  ],
  "metadata": {
